<resources>
    <string name="app_name">热门电影</string>
    <string name="collection">收藏</string>
    <string name="downLoad">我的下载</string>
    <string name="goodSoft">福利</string>
    <string name="share">分享</string>
    <string name="feedBack">建议反馈</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="theme">主题</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">完成</string>
    <string name="cancel">取消</string>
    <string name="no_data">暂无数据</string>
    <string name="recommend">精彩推荐</string>
    <string name="my_record">历史</string>
    <string name="my_down">缓存</string>
    <string name="my_collection">收藏</string>
    <string name="my_them">主题</string>
    <string name="setting_recommend">推荐给好友</string>
    <string name="feedback">建议反馈</string>
    <string name="setting_recommend_clear">清理缓存</string>
</resources>