<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              style="@style/both_match_style"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--标题栏
        设置的layout_scrollFlags有如下几种选项：
        scroll: 所有想滚动出屏幕的view都需要设置这个flag-没有设置这个flag的view将被固定在屏幕顶部。
        enterAlways: 这个flag让任意向下的滚动都会导致该view变为可见,启用快速“返回模式”。
        enterAlwaysCollapsed: 当你的视图已经设置minHeight属性又使用此标志时，
                              你的视图只能以最小高度进入，只有当滚动视图到达顶部时才扩大到完整高度。
        exitUntilCollapsed: 滚动退出屏幕，最后折叠在顶端。-->

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ActionBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--app:layout_scrollFlags="scroll|enterAlways"-->

            <include layout="@layout/main_title" />

        </android.support.v7.widget.Toolbar>

        <com.booboomx.hotvideo.widget.theme.ColorRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="?attr/mine_background"
            android:layout_gravity="center_vertical|right"
           >

            <ImageView
                android:scaleType="fitXY"
                android:layout_centerInParent="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/img_setting"
                android:src="@mipmap/my_set" />

        </com.booboomx.hotvideo.widget.theme.ColorRelativeLayout>

    </android.support.design.widget.AppBarLayout>
    <!--包含可滑动的布局内容(RecyclerView,NestedScrollView,不支持ListView，ScrollView)
   必须要设置app:layout_behavior="@string/appbar_scrolling_view_behavior"
   属性来告知CoordinatorLayout该组件是带有滑动行为的组件,
   然后CoordinatorLayout在接受到滑动时会通知AppBarLayout中可滑动的Toolbar可以滑出屏幕-->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:divider="@drawable/line"
            app:dividerPadding="40dp"
            app:showDividers="middle|end">

            <RelativeLayout
                android:id="@+id/rl_record"
                style="@style/mine_lin_style"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/tv_history"
                    style="@style/common_tv_style"
                    android:layout_centerVertical="true"
                    android:text="@string/my_record" />

                <ImageView
                    style="@style/both_wrap_style"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/right" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.jude.easyrecyclerview.EasyRecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="@dimen/mine_list_view_margin_left"
                    android:layout_marginRight="@dimen/mine_list_view_margin_left"
                    app:scrollbars="none"
                    android:visibility="gone"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_down"
                style="@style/mine_lin_style"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/tv_down"
                    style="@style/common_tv_style"
                    android:layout_centerVertical="true"
                    android:text="@string/my_down" />

                <ImageView
                    style="@style/both_wrap_style"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/right" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_collection"
                style="@style/mine_lin_style"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_collection"
                    style="@style/common_tv_style"
                    android:layout_centerVertical="true"
                    android:text="@string/my_collection" />

                <ImageView
                    style="@style/both_wrap_style"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/right" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_them"
                style="@style/mine_lin_style"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_them"
                    style="@style/common_tv_style"
                    android:layout_centerVertical="true"
                    android:text="@string/my_them" />

                <ImageView
                    style="@style/both_wrap_style"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/right" />
            </RelativeLayout>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
